--- a/ucomm/less/base-responsive.less
+++ b/ucomm/less/base-responsive.less
@@ -138,9 +138,13 @@ body.facstaff #nav-facstaff a {
       }
   }
 
-  .navbar-toggle:hover, .navbar-toggle:focus{
+  .navbar-toggle:hover {
     background-color: @su-clay;
   }  
+
+  button.collapsed {
+    background-color: @su-red !important; 
+  }
   .navbar-collapse {
     width: 100%;
 
