--- a/ucomm/less/landing-responsive.less
+++ b/ucomm/less/landing-responsive.less
@@ -3,6 +3,13 @@
 //////////////////////////
 // phone
 @media (max-width: @screen-xs-max) {
+  #main-content ul {
+  padding-left: 15px;
+    li {
+      font-size: 1.2em;
+      line-height: 1.4em;
+    }
+  }
 } // @media (max-width: @screen-xs-max)
 
 
